feat(Server): Update Schema
With the new schema library and changes to the format the server needed to support backward compatibility.
The server now has a SchemaManager.yaml file to configure where the server will load schemas from.
Cleanup of Gson usage

JORA: MSG-142