@@ -43,6 +43,7 @@ import io.mapsmessaging.network.protocol.impl.coap.subscriptions.Context;
 import io.mapsmessaging.network.protocol.impl.coap.subscriptions.SubscriptionState;
 import io.mapsmessaging.network.protocol.impl.coap.subscriptions.TransactionState;
 import io.mapsmessaging.schemas.config.SchemaConfig;
+import io.mapsmessaging.schemas.config.SchemaResource;
 import lombok.Getter;
 import lombok.NonNull;
 import org.jetbrains.annotations.NotNull;
@@ -239,10 +240,10 @@ public class CoapProtocol extends Protocol {
       Observe option = new Observe((int) (context.getObserveId().incrementAndGet() & 0xffff));
       optionSet.putOption(option);
     }
-    List<SchemaConfig> schemas = SchemaManager.getInstance().getSchemaByContext(messageEvent.getDestinationName());
+    List<SchemaResource> schemas = SchemaManager.getInstance().getSchemaByContext(messageEvent.getDestinationName());
     ContentFormat contentFormat = new ContentFormat(Format.TEXT_PLAIN);
     if (!schemas.isEmpty()) {
-      String mime = schemas.get(0).getMimeType();
+      String mime = schemas.getFirst().getDefaultVersion().getMimeType();
       if (mime != null) {
         Format format = Format.stringValueOf(mime);
         contentFormat = new ContentFormat(format);
